[tool.poetry]
name = "flower-workflow-engine"
version = "0.1.0"
description = "Package to enable to define flows to fetch and transform data"
authors = ["Dieik Ramos <dieik95@gmail.com>"]
readme = "README.md"
packages = [{include = "flower"}]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"


[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
black = "^24.10.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = '\.pyi?$'
line-length = 120
target-version = ['py39']
extend-exclude = '''
/(
  # ignore some directories and files
  | .git
  | venv
)/
'''

